newclay/test/Compiler/Propagation/Fail/BlocksDivergentBranchReturns/main.clay
define main;
overload main() {
    if (true)
        return true;
    else
        return 0;
}

